Fixing overflowing on mobile

--- a/_assets/scss/_components/feature-section.scss
+++ b/_assets/scss/_components/feature-section.scss
@@ -1,6 +1,5 @@
 .feature-section {
   text-align: center;
-  padding: 2rem 0;
   max-width: 50rem;
 
   &__headline {
